--- a/client/index.html
+++ b/client/index.html
@@ -69,6 +69,8 @@
           <script src="app/main/loggedIn/loggedIn.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/main/newPoll/newPoll.controller.js"></script>
+          <script src="app/main/newPoll/newPoll.directive.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
