--- a/client/index.html
+++ b/client/index.html
@@ -71,6 +71,7 @@
           <script src="app/main/main.js"></script>
           <script src="app/main/newPoll/newPoll.controller.js"></script>
           <script src="app/main/newPoll/newPoll.directive.js"></script>
+          <script src="app/main/newPollPosted/newPollPosted.directive.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
