--- a/client/index.html
+++ b/client/index.html
@@ -69,11 +69,12 @@
           <script src="app/main/loggedIn/loggedIn.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/main/myPolls/myPolls.directive.js"></script>
           <script src="app/main/newPoll/newPoll.controller.js"></script>
           <script src="app/main/newPoll/newPoll.directive.js"></script>
           <script src="app/main/newPollPosted/newPollPosted.directive.js"></script>
-          <script src="app/user/user.controller.js"></script>
-          <script src="app/user/user.js"></script>
+          <script src="app/main/signUp/signUp.directive.js"></script>
+          <script src="app/main/votePoll/votePoll.directive.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
