--- a/client/index.html
+++ b/client/index.html
@@ -53,6 +53,7 @@
       <script src="bower_components/angular-route/angular-route.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/Chart.js/Chart.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -69,6 +70,7 @@
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/main/myPolls/myPolls.directive.js"></script>
+          <script src="app/main/myResults/myResults.directive.js"></script>
           <script src="app/main/newPoll/newPoll.controller.js"></script>
           <script src="app/main/newPoll/newPoll.directive.js"></script>
           <script src="app/main/newPollPosted/newPollPosted.directive.js"></script>
